--- a/oxidized/frontend/index.html
+++ b/oxidized/frontend/index.html
@@ -605,6 +605,8 @@
             // Update toggle button state
             const toggle = document.querySelector('.privacy-toggle');
             if (toggle) toggle.classList.toggle('active', privacyMode);
+            // Recalculate masonry layout since font change affects card heights
+            layoutMasonry();
         }
 
         init();
